--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ aioify==0.3.2
 asyncio==3.4.3
 beautifulsoup4==4.9.1
 lxml==4.5.2
-PyQt5==5.15.0
-PyQt5-sip==12.8.0
-PyQtWebEngine==5.15.0
+selenium==3.141.0
 requests==2.24.0
 tqdm==4.48.2
 urllib3==1.24.3
+tabulate==0.8.7
+pandas==1.1.1
